--- a/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/addproject.html
+++ b/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/addproject.html
@@ -2,51 +2,147 @@
 {% load i18n widget_tweaks %}
 {% load static %}
 {% block css %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'QuiverMain/css/view_projectstyle.css' %}" />
 {% endblock css %}
 
 {% block title %}<title>Projects</title> {% endblock title %}
 
 {% block bodytag %} {% endblock bodytag %}
+{% block javascript %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{% static 'path_to/jquery.formset.js' %}"></script>
+<script type="text/html" id="tag-template">
+<div id="tag__prefix__">
+    {{ tag_formset.empty_form }}
+</div>
+</script>
 
+<script>
+$(document).ready(function() {
+    $('.add-tag').click(function(ev) {
+        ev.preventDefault();
+        var count = $('#tag-form-container').children().length;
+        var tmplMarkup = $('#tag-template').html();
+        var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+        $('div#tag-form-container').append(compiledTmpl);
+
+        // update form count
+        $('#id_tags_formset-TOTAL_FORMS').attr('value', count+1);
+
+        // some animate to scroll to view our new form
+        $('html, body').animate({
+                scrollTop: $("#add-tag-button").position().top-200
+            }, 800);
+    });
+});
+</script>
+{% endblock javascript %}
 {% block content %}
-<div class="row content" style="margin-top:0;">
-    <div class = "row projectview">
-        <div class="col-lg-6">
-            <legend>View Projects</legend>
+<div class="row content">
+    <div class="col-lg-12">
+
+        <!-----------------------PROJECT UPLOAD------------------------------>
+        <div class = "row projectupload">
+            <div class="col-lg-12">
+                <legend>Project Upload</legend>
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addProjectModal">Add Project</button>
+                <!-- Modal -->
+                <div id="addProjectModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Upload Projects</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-horizontal row">
+                                    <div class="col-lg-12">
+                                        <form method="post" enctype="multipart/form-data">
+                                            {% csrf_token %}
+                                            <div class="form-group col-lg-12">
+                                                <label>File</label><br>
+                                                <div class="fileUpload btn btn-primary">
+                                                    <span>Choose File</span>
+                                                    {{project_file_form.project_file | attr:"class:upload"}}
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group col-lg-12">
+                                                <label>Name</label>
+                                                {{ project_details_form.project_name|attr:"class:form-control" }}
+                                            </div>
+
+                                            <div class="form-group col-lg-12">
+                                                <label>Description</label>
+                                                {{ project_details_form.project_description|attr:"class:form-control" }}
+                                            </div>
+
+                                            {% csrf_token %}
+                                            {{ tags.management_form }}
+                                            <div id="tag-form-container">
+                                                    <div id="item-{{ forloop.counter0 }}">
+                                                        {{tag_formset }}
+                                                    {% if tag_formset.can_delete %}
+                                                        <li>{{ tag_form.DELETE}}</li>
+                                                    {% endif %}
+                                                    </div>
+                                            </div>
+                                            <a href="#" id="add-tag-button" class="btn btn-info add-tag">Add Item</a>
+                                                                                        <button class="btn btn-primary" type="submit">Add Project</button>
+                                        </form>
+                                    </div>
+                                    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{% static 'path_to/jquery.formset.js' %}"></script>
+<script>
+    $('.link-formset').formset({
+        addText: 'add link',
+        deleteText: 'remove'
+    });
+</script>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                        <!--{% if uploaded_file_url %}
+                        <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+                        {% endif %}-->
+            </div>
+        </div>
+
+        <!-----------------------THIS IS A BUFFER/PADDING------------------------------>
+        <div class="row top-buffer-30"></div>
+
+        <!-----------------------PROJECT VIEW------------------------------>
+
+        <div class = "row projectview">
+            <div class="col-lg-12">
+                <legend>View Projects</legend>
+                <div class="well well-sm">
+                    <strong>Project List</strong>
+                </div>
+                <div id="products" class="row list-group">
+                    {% for project in projects %}
+                    <div class="item col-lg-6">
+                        <div class="thumbnail">
+                            <img class="group list-group-image" src="{{ image.schematic_image.url }}" width="300px" alt="" />
+                            <div class="caption">
+                                <h2 class="group inner list-group-item-heading">{{project.project_name}}</h2>
+                                <h4 class="group inner list-group-item-text">{{project.project_description}}</h4>
+                                {% for tag in tags %}
+                                <p style="color:blue;">{{ tag.tag_name }}</p>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
-    <div class = "row projectupload">
-        <div class="col-lg-6">
-            <legend>Project Upload</legend>
-            <form class="form-horizontal" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{project_file_form.project_file}}
-
-                <div class="form-group col-lg-12">
-                    <label>Name</label>
-                    {{ project_details_form.project_name|attr:"class:form-control" }}
-                </div>
-
-                <div class="form-group col-lg-12">
-                    <label>Description</label>
-                    {{ project_details_form.project_description|attr:"class:form-control" }}
-                </div>
-
-                <div class="form-group col-lg-12">
-                    <label>Tags</label>
-                    {{ tags_form.tag_name|attr:"class:form-control" }}
-                </div>
-
-                <button class="btn btn-primary" type="submit">Add project</button>
-            </form>
-
-                    <!--{% if uploaded_file_url %}
-                    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-                    {% endif %}-->
-        </div>
-    </div>
-
-
 </div>
 {% endblock content %}
