--- a/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/login.html
+++ b/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n widget_tweaks %}
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'QuiverMain/css/login.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'QuiverMain/css/loginstyle.css' %}" />
 {% endblock css %}
 
 {% block bodytag %}id="bg" style="background-image: url('{% static "QuiverMain/images/background-dlsu.jpg" %}')";{% endblock bodytag %}
@@ -20,7 +20,7 @@
     {% endif %}
 {% endif %}
 
-<div class="container">
+<div class="container-fluid">
 <div class="row background">
     <div class="col-lg-12">
         <div class="row">
