--- a/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/mainbase.html
+++ b/COMETQuiver/Quiver3rd/QuiverMain/templates/QuiverMain/mainbase.html
@@ -4,8 +4,9 @@
 <html>
     <head>
         {% block title %}<title></title>{% endblock title %}
-
-        {% block css %} {% endblock css %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'QuiverMain/css/mainbase_style.css' %}" />
+        {% block css %}{% endblock css %}
         <!-- Latest compiled and minified CSS -->
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,50 +18,56 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-
-    </head>
-
-    <body {% block bodytag %} {% endblock bodytag %}>
-
-        <div class ="container">
-            <div class ="row navbar" style="margin-bottom:0;">
-                <nav class="navbar navbar-default">
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="{% url 'home' %}"><img src="{% static 'QuiverMain/images/QuiverLogo.png' %}" width="20px";><span class="sr-only">(current)</span></a></li>
-                            <li><a href="{% url 'project page' %}">Projects</a></li>
-                            <li><a href="{% url 'project page' %}">Portfolios</a></li>
-                        </ul>
-
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <form class="navbar-form">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="">
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Search</button>
-                                </form>
-                            </li>
-                            <li class="dropdown">
-                                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.username}}<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{% url 'user profile' user.username %}">{{user.first_name}}</a></li>
-                                    <li><a href="{% url 'update profile' %}">Edit Profile</a></li>
-                                    <li><a href="#">Settings</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="/logout/">Logout</a></li>
-                              </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            {% block content %}
-            {% endblock content %}
-        </div>
         {% block javascript %}
         {% endblock javascript %}
+    </head>
+
+    <body style="padding-top:60px;"{% block bodytag %} {% endblock bodytag %}>
+
+        <div class="container-fluid" id="page-wrapper">
+        <nav class="navbar navbar-ian navbar-fixed-top">
+            <div class="navbar-header" style="margin-left:145px;">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+
+              <a class="navbar-brand" href="{%url 'home' %}"><img src="{%'static' 'QuiverMain/images/QuiverLogo.png' $}" width="90px"; style=";margin-right:10px;margin-bottom:200px;"></a>
+
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                        <li><a href="{%url 'project page'%}">Projects</a></li>
+                        <li><a href="{%url 'portfolio page'%}">Portfolios</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right" style="margin-right:200px">
+                    <li>
+                        {% if user.userprofile.profile_picture%}
+                        <img src="{% static 'QuiverMain/images/ian.jpg' %}" style="border-radius:50%;width:40px;margin-top:5px;">
+                        {% endif %}
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user.first_name }} {{user.last_name}}<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'user profile' 'user.username' %}" target="_blank"><span class="glyphicon glyphicon-profile" aria-hidden="true"></span>Profile</a></li>
+                            <li><a href="{% url 'update profile'%}" target="_blank"><span class="glyphicon glyphicon-profile" aria-hidden="true"></span>Edit Profile</a></li>
+                            <li><a href="#" target="_blank"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> User Settings</a></li>
+                            <li><a href="{%url 'logout' %}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </nav>
+    </div>
+        </nav>
+            {% block content %}
+            {% endblock content %}
+
     </body>
 </html>
